<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PyCom</string>
    
    <!-- Bottom Navigation -->
    <string name="nav_editor">Editor</string>
    <string name="nav_terminal">Terminal</string>
    <string name="nav_files">Files</string>
    <string name="nav_settings">Settings</string>
    
    <!-- Editor -->
    <string name="run_code">Run Code</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    
    <!-- Terminal -->
    <string name="enter_command">Enter command...</string>
    <string name="send">Send</string>
    
    <!-- Files -->
    <string name="new_file">New File</string>
    <string name="file_icon">File Icon</string>
    <string name="filename_placeholder">filename.py</string>
    <string name="file_size_placeholder">0 KB</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="editor">Editor</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_default">14sp</string>
</resources>
